# printomat_drf

api/: pyproject.toml
api/config/: settings.py
