[tool.poetry]
name = "printomat-drf"
version = "0.1.0"
description = ""
authors = ["Blazej Bielski <bbielski@lyck.pl>"]
readme = "README.md"
packages = [{include = "printomat_drf"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2.2"
djangorestframework = "3.14.0"
pytest = "7.3.2"
pytest-django = "4.5.2"
pytest-cov = "4.1.0"
black = "23.3.0"
flake8 = "6.0.0"
django-debug-toolbar = "4.1.0"
drf-spectacular = "0.26.2"
djangorestframework-simplejwt = "5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
